[gd_scene load_steps=6 format=3 uid="uid://c23w1fskru2xu"]

[ext_resource type="Script" path="res://scripts/ui/menu_tile.gd" id="1_36dkl"]
[ext_resource type="Theme" uid="uid://b0ba7fy76ajr5" path="res://themes/theme_button.tres" id="1_70v2s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlwt8"]
bg_color = Color(0.8, 1, 0.7, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xa44t"]
bg_color = Color(1, 0.95, 0.7, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4iyys"]
bg_color = Color(1, 1, 1, 1)

[node name="Menu Tile" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -250.0
offset_right = 325.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36dkl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.5
theme_override_constants/separation = 32

[node name="Panel Buy" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_rlwt8")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel Buy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Buy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button Buy" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel Buy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_70v2s")

[node name="Panel Upgrade" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xa44t")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel Upgrade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Upgrade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button Upgrade" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel Upgrade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_70v2s")

[node name="Panel End Turn" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_4iyys")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel End Turn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "End Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button End Turn" type="Button" parent="MarginContainer/VBoxContainer/Panel End Turn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_70v2s")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Panel Buy/Button Buy" to="." method="_on_button_buy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Panel Upgrade/Button Upgrade" to="." method="_on_button_upgrade_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel End Turn/Button End Turn" to="." method="_on_button_end_turn_pressed"]
